# MIDIPlusPlus-Mac

./: CMakeLists.txt  Info.plist  README.md
.github/workflows/: mac-build.yml
config/: config.json
include/: InputInjector.hpp  MIDIPlayer.hpp  MacInputInjector.hpp  MainViewController.h  RobloxKeyMapper.hpp  RtMidi.h  Transpose.h  config.hpp  midi_parser.h  midi_structures.h
src/: AppDelegate.mm  ConfigHandler.cpp  MIDIParser.cpp  MIDIPlayer.cpp  MacInputInjector.mm  MainViewController.mm  RobloxKeyMapper.cpp  RtMidi.cpp  TranspositionCore.cpp  main.cpp  main.mm
src/windows/: NtUserInput.cpp  NtUserInput.h  WinInputInjector.cpp  main.cpp  resources.rc
